--- a/src/App/CMakeLists.txt
+++ b/src/App/CMakeLists.txt
@@ -4,6 +4,8 @@ set(APP_SOURCE_FILES
     Panel.cpp
     SceneWindow.hpp
     SceneWindow.cpp
+    Components/PanelLayout.hpp
+    Components/PanelLayout.cpp
     Components/TopPanelBar.hpp
     Components/TopPanelBar.cpp
 )
